Fix to align H2 correctly

--- a/styles/options.css
+++ b/styles/options.css
@@ -52,6 +52,7 @@ button {
 
 .subheader h2 {
   float: left;
+  clear: both;
 }
 
 .form {
